# tensorflow_workspace

./: .gitattributes  .gitignore  TRAINING_HOWTO.md  docker-run  docker-run-gpu  predefined_classes.txt  setup.sh  tensorflow_intro_and_labeling.md
2019Game/data/: .gitignore  create_tf_record.py  label_map.pbtext  remove_excess_labels.py
2019Game/models/: test_detection.py  train.sh
2020Game/: .gitignore  README.md
2020Game/color_detection/: advanced_model.py  blue.csv  blue_angle.csv  blue_straight.csv  color_detector.h5  compile_csv.py  compiled_blue.csv  compiled_green.csv  compiled_red.csv  compiled_yellow.csv  csv_to_data.py  data.npz  data_1.npz  data_angle.npz  data_straight.npz  data_wheel.npz  detect.h5  detect_adv.h5  green.csv  green_angle.csv  green_straight.csv  model_tf2.py  red.csv  red_angle.csv  red_straight.csv  simple_model.pb  simple_model.py  test.py  tflite_inference.py  unnormalized_data.h5  unnormalized_data.npz  unnormalized_data.tflite  viz_model.py  (+4 more)
2022Game/: .gitignore  make_images.py  resize_all.py  validator.py  validator_multi.py
ai_testing/: tensorflow_test.py
scripts/: UnusedImageRemoval.py  aspect_ratios.py  autolabel_apriltags.py  check_label_sanity.py  coco2voc.py  fix_bounding_boxes.py  fix_paths.py  fix_paths_update.py  format_xml.sh  make_apriltag_images.py  move_xml_labels.py  remove_excess_labels.py  remove_non_pbtxt.py  remove_unlabeled_images.py  remove_zero_object_xmls_and_images.py  train_test_valid_split.py
tools/: .gitignore  CMakeLists.txt  autolabel_apriltags.py  extract_frames.cpp  hard_neg_maker.py  remove_apriltags.py  untitled-f017359.xml  video_downloader.py
(+70691 files in other folders)
